<resources>
    <string name="app_name">সেহরি ও ইফতার</string>
    <string name="about_company">আমাদের সম্পর্কে</string>
    <string name="powered_by">সৌজন্যে</string>
    <string name="company_name">System Decoder</string>
    <string name="tag_line">Making system for decode technoloy!</string>
    <string name="email">masudsikdar85@gmail.com</string>
    <string name="mobile">+8801751414572</string>
    <string name="about_us">System Decoder is a Software company. We will provide IT consultancy and any kind of management software as per your demand.</string>
    <string name="auzubillah_arabic">أَعُوذُ بِاللَّهِ مِنَ الشَّيْطَانِ الرَّجِيمِ</string>
    <string name="auzubillah_bengali">আউযুবিল্লাহি মিনাশ শাইতানির রাজীম</string>
    <string name="bismillah_arabic">بِسْمِ ٱللَّٰهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</string>
    <string name="bismillah_bengali">বিসমিল্লাহির রাহমানির রাহীম</string>
    <string name="sehri_niyat">রোজার নিয়ত</string>
    <string name="sehri_niyat_arabic">نَوَيْتُ اَنْ اُصُوْمَ غَدًا مِّنْ شَهْرِ رَمْضَانَ الْمُبَارَكِ فَرْضَا لَكَ يَا اللهُ فَتَقَبَّل مِنِّى اِنَّكَ اَنْتَ السَّمِيْعُ الْعَلِيْم</string>
    <string name="sehri_niyat_bengali">নাওয়াইতু আন আছুম্মা গাদাম মিন শাহরি রমাজানাল মুবারাকি ফারদাল্লাকা, ইয়া আল্লাহু ফাতাকাব্বাল মিন্নি ইন্নিকা আনতাস সামিউল আলিম।</string>
    <string name="sehri_niyat_bengali_torjoma">হে আল্লাহ! আমি আগামীকাল পবিত্র রমজানের তোমার পক্ষ থেকে নির্ধারিত ফরজ রোজা রাখার ইচ্ছা পোষণ (নিয়ত) করলাম। অতএব তুমি আমার পক্ষ থেকে (আমার রোজা তথা পানাহার থেকে বিরত থাকাকে) কবুল কর, নিশ্চয়ই তুমি সর্বশ্রোতা ও সর্বজ্ঞানী।</string>
    <string name="iftar_niyat">ইফতারের দোয়া</string>
    <string name="iftar_niyat_arabic">اَللَّهُمَّ لَكَ صُمْتُ وَ عَلَى رِزْقِكَ وَ اَفْطَرْتُ بِرَحْمَتِكَ يَا اَرْحَمَ الرَّاحِيْمِيْن</string>
    <string name="iftar_niyat_bengali">আল্লাহুম্মা লাকা ছুমতু ওয়া আলা রিযক্বিকা ওয়া আফতারতু বিরাহমাতিকা ইয়া আরহামার রাহিমিন।</string>
    <string name="iftar_niyat_bengali_torjoma">হে আল্লাহ! আমি তোমারই সন্তুষ্টির জন্য রোজা রেখেছি এবং তোমারই দেয়া রিযিক্বের মাধ্যমে ইফতার করছি।</string>
    <string name="rojar_tatporjo">রোজায় করণীয় ও বর্জনীয়</string>
    <string name="rojar_tatporjo_description">আল্লাহ রাব্বুল আলামীনের ক্ষমা ও পুরস্কারপ্রাপ্তির মহিমান্বিত মুহূর্তগুলো আমাদের জীবনে বারবার ঘুরেফিরে আসে। রমজান হলো কল্যাণ ও বরকতের বসন্তকাল। এই মহিমান্বিত রমজানের উপকারিতা ও বরকত পরিপূর্ণরূপে লাভ করার জন্য এ মাসের করণীয় কাজগুলো মহব্বতের সাথে আঞ্জাম দেওয়া এবং বর্জনীয় বিষয়গুলো থেকে সতর্কভাবে বিরত থাকা জরুরি। কোরআন ও সুন্নাহর আলোকে এ মাসের করণীয় বিষয়গুলো তুলে ধরা হচ্ছে।</string>
    <string name="rojar_koroniyo_roja_rakhar">
        আল্লাহ তাআলা ইরশাদ করেছেন, হে ঈমানদারগণ, তোমাদের ওপর রোযা ফরজ করা হয়েছে, যেমন ফরজ করা হয়েছিল তোমাদের পূর্ববর্তীদের ওপর, যেন তোমরা মুত্তাকী হতে পারো।\n\n\t-সূরা বাকারা (০২) : ১৮৩\n\n
        হযরত আবু হুরায়রা রাদি. বলেন, রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম ইরশাদ করেছেন, যখন তোমরা রমজানের চাঁদ দেখবে তখন রোযা রাখবে। যখন শাওয়ালের চাঁদ দেখবে তখন থেকে রোযা বন্ধ করবে। আকাশ মেঘাচ্ছন্ন থাকলে ত্রিশ দিন রোযা রাখবে।\n\n\t-সহীহ বুখারী : ১৯০৯\n\n
        অপর এক হাদীসে এসেছে রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম ইরশাদ করেছেন, আল্লাহ তাআলা বলেন, রোযা আমার জন্য, আমি নিজেই এর প্রতিদান দেবো। কেয়ামতের দিন রোযাদারদের জন্য একটি বিশেষ হাউজ থাকবে, যেখানে রোযাদার ব্যতীত অন্য কারও আগমন ঘটবে না।\n\n\t-মুসনাদে বায্যার : ৮১১৫\n\n
        রমজানের রোযা প্রত্যেক সুস্থ, মুকীম প্রাপ্তবয়স্ক পুরুষ এবং হায়েয-নেফাসমুক্ত প্রাপ্তবয়স্ক নারীর ওপর ফরজ। শরয়ী ওযর ছাড়া এ মাসের একটি রোযাও কোনো মুসলমান ইচ্ছাকৃতভাবে না রাখলে জঘন্য অপরাধী সাব্যস্ত হবে। দীনের মৌলিক বিধান লঙ্ঘনকারী ও ইসলামের ভিত্তি বিনষ্টকারী হিসাবে গণ্য হবে এবং কঠিন শাস্তির উপযুক্ত হবে।\n\n
        হাদীস শরীফে এসেছে, হযরত আবু উসামা রাদি. বলেন, আমি রাসূল সাল্লাল্লাহু আলাইহি ওয়াসাল্লামকে বলতে শুনেছি, আমি ঘুমিয়ে ছিলাম। স্বপ্নে দেখলাম আমার কাছে দুই ব্যক্তি আগমন করেছে। তারা আমার বাহুদ্বয় ধরে এক দুর্গম পাহাড়ে নিয়ে গেল।\n-আমাকে বলল, আপনি পাহাড়ে উঠুন।\n-আমি বললাম, আমি তো উঠতে পারব না।\n-তারা বলল, আমরা আপনাকে উপরে ওঠা সহজ করে দেবো।\n-আমি উপরে উঠলাম। যখন পাহাড়ের সমতলে পৌঁছলাম, হঠাৎ ভয়ঙ্কর আওয়াজ শুনতে পেলাম। বললাম, এসব কিসের আওয়াজ?\n-তারা বলল, এটা জাহান্নামীদের আর্তনাদ। তারপর আমাকে নিয়ে এগিয়ে চলল। হঠাৎ কিছু লোক দেখতে পেলাম, যাদেরকে তাদের পায়ের মাংসপেশি দ্বারা ঝুলিয়ে রাখা হয়েছে। তাদের মুখের দুই প্রান্ত ছিঁড়ে ফেলা হয়েছে এবং তা থেকে রক্ত ঝরছে। আমি বললাম, এরা কারা?\n-তারা বলল, যারা ইফতারের সময় হওয়ার আগেই রোযা ভেঙে ফেলে।\n\n\t-মুসতাদরাকে হাকেম : ১, হাদীস নং : ১৬০০\n
    </string>
    <string name="rojar_koroniyo_taribir_namaz_pora">
        বরকতময় মাহে রমজানের দিন-রাত উভয়টিই মূলত ইবাদতের জন্য। দিনের ইবাদত হলো রোযা যা শরীয়তে ফরজ, আর রাতের ইবাদত হলো তারাবীহ নামাজ যা সুন্নতে মুয়াক্কাদাহ। এ আমল ফরজ না হলেও এর ফযীলত ও মর্যাদা অনেক। হযরত আবু হুরায়রা রাদি. থেকে বর্ণিত, রাসূল সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেন, যে ব্যক্তি পূর্ণ ঈমান ও বিশ্বাসের সাথে সওয়াবের আশায় রমজানের রাতে তারাবীহ আদায় করে তার পূর্ববর্তী গোনাহসমূহ ক্ষমা করে দেওয়া হয়।\n\n\t-সহীহ বুখারী : ২০০৯\n\n
        হযরত আব্দুর রহমান ইবনে আওফ রাদি. বর্ণনা করেন, রাসূল সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম ইরশাদ করেছেন, আল্লাহ তাআলা তোমাদের ওপর রমজানের রোযা ফরজ করেছেন। আর আমি কিয়ামুল লাইল তথা তারাবীহ সুন্নত করেছি। সুতরাং যে ব্যক্তি ঈমানের সাথে সওয়াবের আশায় রমজানের রোযা ও তারাবীহ আদায় করবে সে ওই দিনের মতো নিষ্পাপ হয়ে যাবে যেদিন সে মাতৃগর্ভ থেকে সদ্য ভূমিষ্ঠ হয়েছিল। \n\n\t-(মুসনাদে আহমদ : ১৬৬০) \n\nরমজানের পূর্ণ কল্যাণ ও বরকত লাভ করতে হলে তারাবীর ব্যাপারে অবশ্যই যত্মবান হতে হবে।\n
    </string>
    <string name="rojar_koroniyo_koryan_telyat_kora">
        রোযা এবং রমজানের সঙ্গে কোরআনের গভীর সম্পর্ক রয়েছে। এ জন্যই রমজানে কোরআন নাযিল হয়েছে এবং এ জন্যই নবীজী সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম রমজান মুবারাকে কোরআন তেলাওয়াতের খুব গুরুত্ব দিতেন। এ প্রসঙ্গে হযরত আব্দুল্লাহ ইবনে আব্বাস রাদি. বলেন, রাসূল সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম ছিলেন সবচেয়ে বেশি দানশীল ও বদান্য, রমজানে তাঁর দানশীলতা ও বদান্যতা অনেক বেড়ে যেত। প্রত্যেক রমজানে জিবরাঈল আ. তাঁর সঙ্গে মিলিত হতেন এবং পুরো কোরআন একে অপরকে শোনাতেন।\n\n\t-সহীহ বুখারী : ০৬\n\n
        মূলত এই সুন্নতের ভিত্তিতেই তারাবীর মাধ্যমে মুসলমানরা সারা রমজানে একবার পুরো কোরআন শরীফ তেলাওয়াত করে এবং শোনে। নামাজের বাইরেও নিজেরা কোরআন খতম করে। যারা রমজান মাসে কোরআন তেলাওয়াতে ব্যস্ত থাকে তাদের ব্যাপারে সুসংবাদ এসেছে। হযরত আব্দুল্লাহ ইবনে আমর রাদি. থেকে বর্ণিত রাসূল সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম ইরশাদ করেছেন, রোযা এবং কোরআন কিয়ামতের দিন বান্দার জন্য সুপারিশ করবে। রোযা বলবে, হে রব, আমি তাকে খাদ্য এবং যৌন সম্ভোগ থেকে বিরত রেখেছি, অতএব তার ব্যাপারে আমার সুপারিশ গ্রহণ করুন। কোরআন বলবে, আমি তাকে রাতের ঘুম থেকে বিরত রেখেছি (অর্থাৎ না ঘুমিয়ে সে তেলাওয়াত করেছে) অতএব তার ব্যাপারে আমার সুপারিশ গ্রহণ করুন। রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেন, তাদের উভয়ের সুপারিশ গ্রহণ করা হবে।\n\n\t-মুসনাদে আহমাদ : ৬৬২৬ \n\n
    </string>
    <string name="rojar_koroniyo_koryan_sehri_khaya">
        রোযার প্রস্তুতির জন্য যে আহার করা হয় তার নাম সাহরী। সাহরী খাওয়া সুন্নত। পেট ভরে খাওয়া জরুরি নয়, এক ঢোক পানি\n\n
        পান করলেও সাহরীর সুন্নত আদায় হয়ে যাবে। হাদীস শরীফে এসেছে, রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম ইরশাদ করেন, তোমরা সাহরী খাও। কেননা, সাহরীতে বরকত রয়েছে।\n\n\t-সহীহ মুসলিম : ১০৯৫ \n\n
        অন্য হাদীসে এসেছে, সাহরী খাওয়া বরকতপূর্ণ কাজ। সুতরাং তা ছেড়ে দিয়ো না। যদিও তা এক ঢোক পানি দিয়ে হোক না কেন। কেননা, যারা সাহরী খায় আল্লাহ তাআলা তাদের ওপর রহমত বর্ষণ করেন এবং তাঁর ফেরেশতাগণ তাদের জন্য রহমতের দুআ করেন।\n\n\t-মুসনাদে আহমাদ : ১০৭০২ \n\n
        সুবহে সাদেকের কাছাকাছি সময়ে সাহরী খাওয়া মুস্তাহাব। তবে এত দেরি করা মাকরূহ- যে সুবহে সাদেক হয়ে যাওয়ার আশঙ্কা হয়। \n\n
    </string>
    <string name="rojar_koroniyo_koryan_iftar_khaya">
        সারা দিন রোযা রাখার পর সূর্য ডোবার সঙ্গে সঙ্গে যে আহার করা হয় তার নাম ইফতার। এটা শরীয়তে অনেক বড় একটি আমল। এ আনন্দপূূর্ণ আমলের জন্য ঘোষণা করা হয়েছে বড় পুরস্কার। ইফতার যেহেতু অনেক বরকতের তাই এই বরকতপূর্ণ আমল শুরু করতে বিলম্ব করতে নিষেধ করা হয়েছে।\n\n
        রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম ইরশাদ করেছেন, লোকেরা যতদিন প্রথম সময়ে ইফতার করার বিষয়ে যতœবান হবে ততদিন তারা কল্যাণের পথে থাকবে।\n\n\t-সহীহ বুখারী : ১৯৫৭\n\n
        ইফতার খেজুর দ্বারা করা মুস্তাহাব। খেজুর না পেলে পানি দ্বারা ইফতার করবে। হযরত আনাস ইবনে মালেক রাদি. বলেন, রাসূল সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম মাগরিবের নামাজ পড়ার আগে তাজা খেজুর দিয়ে ইফতার করতেন। তাজা খেজুর না পেলে শুকনা খেজুর দ্বারা ইফতার করতেন। আর তাও না পেলে এক ঢোক পানি দ্বারা ইফতার করতেন।\n\n\t-জামে তিরমিযী : ৬৯২\n\n
        সুবহে সাদেকের কাছাকাছি সময়ে সাহরী খাওয়া মুস্তাহাব। তবে এত দেরি করা মাকরূহ- যে সুবহে সাদেক হয়ে যাওয়ার আশঙ্কা হয়। \n\n
    </string>
    <string name="rojar_koroniyo_koryan_doya_kora">
        রোযার মাধ্যমে মুমিন বান্দা আল্লাহর এতই নৈকট্য অর্জন করে যে, যতক্ষণ সে রোযা অবস্থায় অথবা রোযার প্রস্তুতির অবস্থায় থাকে (অর্থাৎ রাত-দিন) ততক্ষণ তার কোনো দুআ ফেরত দেওয়া হয় না, সমস্ত দুআ কবুল করা হয়। রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম ইরশাদ করেন, প্রত্যেক মুসলিম (রমজানে) যে দুআ করে তা কবুল করা হয়।\n\n\t-মুসনাদে বায্যার : ৩১৪১\n\nএ মাস দুআ কবুলের মাস। তাই আমাদের উচিত বেশি বেশি দুআ করা। নয়. ইফতারের আগ মুহূর্তে দুআ করা\n\n
        ইফতারের সময় দুআ কবুল হয়। আব্দুল্লাহ ইবনে মুলাইকা বলেন, আমি আব্দুল্লাহ ইবনে আমর রাদি. থেকে শুনেছি তিনি বলছেন, আমি রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লামকে বলতে শুনেছি, ইফতারের সময় রোযাদারের একটি দুআ কবুল করা হয়।\n\n
        আব্দুল্লাহ ইবনে মুলাইকা বলেন, আমি হযরত আব্দুল্লাহ ইবনে আমরকে ইফতারের সময় এ দুআ করতে শুনেছি, আল্লাহুম্মা ইন্নি আসআলুকা বি রাহমাতিকা আল্লাতি ওসিআত কুল্লা শায়ইন আন তাগফিরলি’। অর্থাৎ, হে আল্লাহ, আমি তোমার দরবারে সেই রহমতের উসিলায় আবেদন করছি যা সকল বস্তুকে বেষ্টন করে রেখেছে, তুমি আমাকে মাফ করে দাও।\n\n\t-(মুসতাদরাকে হাকেম : ১/৫২৯, হাদীস নং : ১৫৬৭)\n\n
        রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম ইফতারের সময় আল্লাহর কাছে এ দুআ করতেন।\n\n\t-(সুনানে ইবনে মাজাহ, হাদীস নং : ১৭৫৩)\n\n
    </string>
    <string name="rojar_borjoniyo_shorgol_kora">
        রোযা অবস্থায় অশ্লীল কথাবার্তা, শোরগোল ও ঝগড়া-ফ্যাসাদ থেকে বিরত থাকা জরুরি। হাদীস শরীফে এসেছে, তোমাদের কেউ যখন রোযা অবস্থায় থাকে তখন যেন অশ্লীল কথা না বলে এবং শোরগোল না করে। আর কেউ যদি তার সঙ্গে ঝগড়া করে, গালি দেয়, তা হলে সে যেন শুধু বলে দেয়, আমি তো রোযাদার। (অর্থাৎ তোমার সাথে বিবাদ করার এবং গালির জবাব দেওয়ার সুযোগ আমার নেই।)\n\n\t-সহীহ বুখারী : ১৯০৪\n\n
        অপর এক হাদীসে রাসূল সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বলেন, কত রোযাদার এমন আছে, (রোযা অবস্থায় অশ্লীল কথা ও কর্ম থেকে বিরত না থাকার ফলে) ক্ষুধা ও পিপাসা ছাড়া রোযা থেকে সে আর কিছু লাভ করতে পারে না। তদ্রƒপ অনেক রাত জাগরণকারী এমন আছে যে তার রাত্রিজাগরণ থেকে জেগে থাকার কষ্ট ছাড়া আর কিছু পায় না।\n\n\t-সুনানে ইবনে মাজাহ : ১৬৯০\n\n
    </string>
    <string name="time_schedule">রোজায় সময়সূচী</string>
    <string name="your_time">আমার সময়সূচী</string>
    <string name="arabic">আরবী</string>
    <string name="bengali">বাংলা উচ্চারণ</string>
    <string name="bengali_torjama">বঙ্গানুবাদ</string>
    <string name="warning">সতর্কীকরণ!</string>
    <string name="rate_us">অ্যাপটি কেমন লাগলো জানান।</string>
    <string name="on_development_mood">ঊন্নয়নের কাজ চলছে। শীঘ্রই আসবে।</string>
    <string name="empty_district">আপনি কোনো জেলাকে আপনার জেলা হিসেবে নির্বাচন করেননি। দয়া করে যেকোনো একটি জেলাকে আপনার জেলা হিসেবে নির্বাচন করুন।</string>
    <string name="select_district">জেলা নির্বাচন করুন</string>
    <string name="share">Share</string>
</resources>