<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/rating_bg"
    tools:context=".activities.SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/galada"
            android:textAlignment="center"
            android:text="@string/bismillah_bengali"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center_horizontal" />

        <ImageView
            android:id="@+id/splashScreenImageId"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/splashScreenAppNameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/galada"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/primary_text_light_nodisable"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/splashScreenCompanyNameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/galada"
            android:gravity="center_horizontal"
            android:text="@string/powered_by"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/splashScreenCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/company_name"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>