<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/content_bg"
    android:padding="10dp"
    tools:context=".activities.IftarerNiyat">

    <ImageView
        android:id="@+id/back_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/iftar_niyat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/galada"
        android:gravity="center_horizontal"
        android:text="@string/iftar_niyat"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/auzubillah_bengali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/galada"
        android:gravity="center_horizontal"
        android:padding="2dp"
        android:layout_marginTop="20dp"
        android:text="@string/auzubillah_bengali"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_below="@id/iftar_niyat"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/bismillah_bengali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/galada"
        android:gravity="center_horizontal"
        android:padding="2dp"
        android:text="@string/bismillah_bengali"
        android:layout_below="@id/auzubillah_bengali"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/bismillah_bengali"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:columnCount="1"
            android:rowCount="3">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/galada"
                        android:gravity="center"
                        android:text="@string/arabic"
                        android:textAlignment="center"
                        android:textColor="@color/teal_700"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:gravity="end"
                        android:text="@string/iftar_niyat_arabic"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/galada"
                        android:gravity="center"
                        android:text="@string/bengali"
                        android:textAlignment="center"
                        android:textColor="@color/teal_700"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/galada"
                        android:justificationMode="inter_word"
                        android:text="@string/iftar_niyat_bengali"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/galada"
                        android:gravity="center"
                        android:text="@string/bengali_torjama"
                        android:textAlignment="center"
                        android:textColor="@color/teal_700"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/galada"
                        android:gravity="start"
                        android:justificationMode="inter_word"
                        android:text="@string/iftar_niyat_bengali_torjoma"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>

    </ScrollView>

</RelativeLayout>